--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^5.0.1",
     "astro": "^3.2.2",
     "sass": "^1.68.0"
   }
